# bot-center

./: .env.example  .gitignore  Cargo.toml  README.md  bc.toml  bc.toml.example
migrations/: 20241016020714_events.sql  20241119083818_sessions.sql
src/: config.rs  db.rs  main.rs  routes.rs  signal.rs
