[package]
edition = "2021"
name = "bot-center"
version = "0.1.0"

[dependencies]
nostr-sdk = "0.33.0" #35
keychat_rust_ffi_plugin = { path = "../plugin/rust" }
# keychat_rust_ffi_plugin = { git = "https://github.com/keychat-io/keychat_rust_ffi_plugin.git", rev = "b8eb6bac95" }
# nostr-sdk = { path = "../nostr/crates/nostr-sdk" }
base64-simd = "0.8.0"
sqlx = {version = "0.7.1", features = ["runtime-tokio", "sqlite"]}
# 
axum = {version = "0.7.4", features = ["ws"]}
axum-extra = { version = "0.9", features = ["typed-header"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
tokio-tungstenite = "0.24.0"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
#
anyhow = "1.0.57"
dashmap = "6.0.1"
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = {version = "1.28.1", features = ["full"]}
toml = "0.8.19"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = {version = "3.1.8", features = ["derive"]}
url = "2.5.2"
dotenvy = "0.15.7"
